# sasdata

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  contributors.tsv  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini  units.py
.codescene/: code-health-rules.json  custom-quality-gates.json
.github/: copilot-instructions.md
.github/workflows/: publish.yml  test-fair-database.yml  test.yml
build_tools/: requirements.txt
docs/: Makefile
docs/source/: conf.py  index.rst  rst_prolog
docs/source/dev/: api.rst  dev.rst
docs/source/user/: RELEASE.rst  user.rst
sasdata/: __init__.py  abscissa.py  ascii_reader_metadata.py  checklist.txt  data.py  data_backing.py  dataset_types.py  default_units.py  distributions.py  exceptions.py  guess.py  metadata.py  model_requirements.py  postprocess.py  raw_form.py  refactor_roadmap.rst  sasdata_design_descions.rst  target_data_object.py  temp_ascii_reader.py  temp_hdf5_reader.py  temp_sesans_reader.py  temp_xml_reader.py  trend.py  util.py
sasdata/condition/: condition_meta.py  trend.py
sasdata/data/: condition.py  condition_meta.py  data.py  data_info.py  meta_data.py  plottables.py  resolution.py  smearing.py  string_representations.py  trend.py
sasdata/data/condition_views/: base_view.py
sasdata/data/conditions/: sample_environment.py
sasdata/data/data_views/: __init__.py  base_view.py
sasdata/data_io/: associations.py  data_export.py  data_import.py  exporter.py  import.py  importer.py  io_base.py  open.py  registry.py
sasdata/data_io/importers/: __init__.py  igor_abs_importer.py  importer.py
sasdata/data_util/: averaging.py  binning.py  deprecation.py  err1d.py  formatnum.py  interpolations.py  interval.py  loader_exceptions.py  manipulations.py  meshmerge.py  new_manipulations.py  nxsunit.py  registry.py  roi.py  uncertainty.py  util.py
sasdata/data_util/slicing/: delaunay_mesh.py  mesh.py  meshmerge.py  rebinning.py  slicer_demo.py  voronoi_mesh.py
sasdata/dataloader/: __init__.py  data_info.py  file_reader_base_class.py  filereader.py  loader.py  manipulations.py  registry.py
sasdata/dataloader/readers/: __init__.py  abs_reader.py  anton_paar_saxs_reader.py  ascii_reader.py  associations.py  cansas_constants.py  cansas_reader.py  cansas_reader_HDF5.py  csv_reader.py  (+5 more)
sasdata/example_data/: README.txt
sasdata/fair_database/: documentation.yaml  manage.py  requirements.txt
sasdata/file_converter/: FileConverterUtilities.py  ascii2d_loader.py  bsl_loader.py  cansas_writer.py  nxcansas_writer.py  otoko_loader.py  red2d_writer.py
sasdata/manual_tests/: interpolation.py
sasdata/metadata_filename_gui/: main.py  metadata_component_selector.py  metadata_tree_widget.py
sasdata/quantities/: __init__.py  _accessor_base.py  _autogen_warning.py  _build_tables.py  _units_base.py  _units_table.py  absolute_temperature.py  accessors.py  constants.py  math.py  math_operations_test.py  notes.rst  numerical_encoding.py  operations.py  operations_examples.py  operations_test.py  plotting.py  quantities.py  quantities_tests.py  quantity.py  quantity_error_tests.py  quantity_examples.py  si.py  test_numerical_encoding.py  unicode_superscript.py  unit_formatting.py  unit_parser.py  unit_parser_test.py  units.py  units_base.py  units_table.py  units_tests.py
sasdata/slicing/: rebinning.py  sample_polygons.py  slicer_demo.py  transforms.py
sasdata/system/: config.py
sasdata/transforms/: NDrebin.py  operation.py  rebinning.py  test_interpolation.py
test/: run_one.py  utest_asbscissa.py  utest_new_sasdata.py  utest_sasdata.py  utest_sasview.py  utest_temp_ascii_reader.py  utest_trend.py  utest_unit_parser.py
test/fileconverter/: utest_bsl_loader.py  utest_nxcansas_writer.py
test/quantities/: utest_math_operations.py  utest_operations.py  utest_quantities.py  utest_quantity_error.py  utest_units.py
test/sasdata/: utest_manipulations.py
test/sasdataloader/: error_conditions.py  utest_abs_reader.py  utest_ascii.py  utest_averaging.py  utest_averaging_analytical.py  utest_cansas.py  utest_data_info.py  utest_data_names.py  utest_extension_registry.py  utest_generic_file_reader_class.py  utest_metadata_tags.py  utest_new_sesans.py  utest_red2d_reader.py  utest_sasdataload.py  utest_sesans.py
test/sasmanipulations/: helper.py  utest_averaging.py  utest_averaging_analytical.py  utest_averaging_box.py  utest_averaging_circle.py  utest_averaging_directional.py  utest_averaging_slab.py  utest_interpolations.py  utest_manipulations.py  utest_nxsunit.py
test/slicers/: meshes_for_testing.py  utest_meshmerge.py  utest_point_assignment.py
test/transforms/: utest_NDrebin.py  utest_interpolation.py
(+167 files in other folders)
