[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-sphinx",
  "hatch-vcs",
  "h5py",
  "lxml",
  "numpy",
]
build-backend = "hatchling.build"


[project]
name = "sasdata"
dynamic = [
  "version",
  "dependencies",
  "optional-dependencies",
]
description = "Sas Data Loader application"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BSD-3-Clause" }
authors = [
    {name = "SasView Team", email = "developers@sasview.org"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
]
keywords = [
  "small-angle",
  "scattering",
  "data analysis",
  "neutron",
  "X-ray",
]

[project.urls]
homepage = "http://sasview.org"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.requirements_txt]
files = [ "requirements.txt" ]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
test = [ "requirements-test.txt" ]


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "sasdata/_version.py"


[tool.hatch.build.targets.sdist]
include = [
  "docs/source",
  "sasdata",
  "test",
]
exclude = [
  ".gitignore",
  "build",
]
ignore-vcs = true


[tool.hatch.build.targets.wheel]
packages = ["sasdata"]
exclude = [
  "test",
]

[tool.hatch.build.targets.wheel.force-include]
#     "**/UI/*py",
"docs/source" = "sasdata/docs-source"
"build/docs" = "sasdata/docs"

[[tool.hatch.build.targets.wheel.hooks.sphinx.tools]]
tool = "apidoc"
source = "../sasdata"
out_dir = "source/dev/generated"
depth = 8
private = false
header = "SasData"

[[tool.hatch.build.targets.wheel.hooks.sphinx.tools]]
tool = "build"
format = "html"
source = "source"
out_dir = "../build/docs"
environment = { PYTHONPATH=".." }

[tool.pytest.ini_options]
minversion = "6.0"
python_files = [
  "utest*py",
]
addopts = [
  "--ignore=test/utest_sasdata.py",
  "-v",
  "-rsx",
]
log_level = "DEBUG"
filterwarnings = [
]
testpaths = [
  "sasdata",
  "test",
]
norecursedirs = [
  "sasdata",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# The ruff rules are available at: https://docs.astral.sh/ruff/rules/
select = ["E",       # pycodestyle errors
          "F",       # pyflakes
          "UP",      # pyupgrade
          "SIM118",  # Use `key in dict` instead of `key in dict.keys()`
          "SIM300"]  # Yoda condition detected


ignore = ["E501",    # line too long (leave to formatter)
          "UP008",   # Use `super()` instead of `super(__class__, self)`
          "UP031"]   # Use format specifiers instead of percent format
